# OrigamiRL

./: .gitignore  README.md  build_obj.py  change_name.py  data.py  dataset.py  filter_map.py  loss.py  main.py  map_hash.json  pyproject.toml  reduce_mesh.py  result.csv  result_9x9.csv  rotate_graph.py  solver.py  temp.py  util.py  visualization.py
pattern/: 1.json  10.json  100.json  11.json  12.json  14.json  15.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  4.json  5.json  7.json  8.json  9.json  GEN_2.json  GEN_3.json  GEN_5.json  GEN_8.json  GEN_9.json  XY_LEFT_1.json  Y_11.json  Y_13.json  Y_14.json  (+23 more)
pattern_9x9/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json  x.json
pattern_merge/: 1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  (+82 more)
pattern_old/: GEN_0.json  GEN_1.json  GEN_4.json  GEN_6.json  GEN_7.json  XY_LEFT_0.json  XY_LEFT_2.json  XY_LEFT_3.json  XY_LEFT_4.json  XY_LEFT_5.json  XY_LEFT_6.json  XY_left.json  Y_0.json  Y_1.json  Y_12.json  Y_15.json  Y_17.json  Y_18.json  Y_19.json  Y_2.json  Y_20.json  Y_22.json  Y_27.json  (+37 more)
(+31 files in other folders)
