[project]
name = "rlorigami"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "jax>=0.9.2",
    "numpy>=2.4.1",
    "tqdm>=4.67.3",
    "open3d>=0.19.0",
    "pandas>=3.0.2",
    "plotly>=6.6.0",
    "torch>=2.11.0",
]
